# OpenVINO.GenAI.NET

./: .gitignore  CLAUDE.md  OpenVINO.NET.sln  README.md  WHISPER_IMPLEMENTATION_SUMMARY.md  WHISPER_README.md  test_whisper.cs  test_whisper_npu_cache.c
.claude/: settings.local.json
.claude/agents/: openvino-genai-expert.md
.github/: dependabot.yml
.github/workflows/: README.md  benchmark.yml  build-test.yml  integration-test.yml  llm-sample-app.yml  main-ci.yml  pr-validation.yml  release.yml  sample-app.yml  whisper-sample-app.yml
doc/: architecture.md  building.md  contributing.md  installation.md  performance.md  quick-start.md  troubleshooting.md
docs/: NUGET_TROUBLESHOOTING.md  WHISPER_SETUP.md
samples/QuickDemo/: Program.cs  QuickDemo.csproj
samples/SimpleStreamingCheck/: Program.cs
samples/StreamingChat/: Program.cs  StreamingChat.Sample.csproj
samples/StreamingTest/: Program.cs  StreamingTest.csproj
samples/TextGeneration/: Program.cs  TextGeneration.Sample.csproj
samples/WhisperDemo/: Program.cs  README.md  WhisperDemo.csproj
scripts/: README.md  download-openvino-runtime.ps1  download-openvino-runtime.sh  download-sample-audio.ps1  download-sample-audio.sh  download-whisper-fp16-model.ps1  download-whisper-model.ps1  download-whisper-model.sh
src/OpenVINO.NET.Core/: OpenVINO.NET.Core.csproj
src/OpenVINO.NET.GenAI/: AudioProcessor.cs  AudioUtils.cs  ChatSession.cs  DiagnosticInfo.cs  Fluid.OpenVINO.GenAI.targets  GenerationConfig.cs  GenerationResult.cs  LLMPipeline.cs  OpenVINO.NET.GenAI.csproj  OpenVINO.NET.GenAI.targets  PerformanceMetrics.cs  WhisperConfig.cs  WhisperDecodedResult.cs  WhisperGenerationConfig.cs  WhisperPipeline.cs  WhisperResult.cs
src/OpenVINO.NET.GenAI/Exceptions/: OpenVINOGenAIException.cs
src/OpenVINO.NET.GenAI/Native/: GenAINativeMethods.cs  NativeLibraryLoader.cs  NativeStructures.cs
src/OpenVINO.NET.GenAI/SafeHandles/: DecodedResultsSafeHandle.cs  GenerationConfigSafeHandle.cs  LLMPipelineSafeHandle.cs  PerformanceMetricsSafeHandle.cs  WhisperConfigSafeHandle.cs  WhisperDecodedResultChunkSafeHandle.cs  WhisperDecodedResultsSafeHandle.cs  WhisperGenerationConfigSafeHandle.cs  WhisperPipelineSafeHandle.cs  WhisperResultsSafeHandle.cs
src/OpenVINO.NET.Native/: OpenVINO.NET.Native.csproj
src/native/: CMakeLists.txt  whisper_wrapper.cpp  whisper_wrapper.hpp
tests/OpenVINO.NET.GenAI.Tests/: ExceptionTests.cs  GenerationConfigTests.cs  IntegrationTests.cs  OpenVINO.NET.GenAI.Tests.csproj  README.md  WhisperIntegrationTests.cs  WhisperPipelineTests.cs  WhisperUnitTests.cs
